# qubit-pulselab

./: .gitignore  README_app.md  pyproject.toml
app/: streamlit_app.py
docs/superpowers/plans/: 2026-06-20-physics-core-phase1.md  2026-06-21-optimizers-phase3.md  (+3 more)
examples/: distortion_vs_ideal.py  drag_vs_gaussian.py  optimize_measured_cost.py  optimize_x_gate.py  robust_vs_nominal.py  t1_decay.py
pulselab/: __init__.py  units.py  viz.py
pulselab/device/: hamiltonian.py  params.py
pulselab/dynamics/: lindblad.py  propagator.py
pulselab/export/: opx.py
pulselab/metrics/: fidelity.py  measurement.py
pulselab/optimize/: base.py  crab.py  drag.py  grape.py  robust.py
pulselab/pulse/: envelope.py  hardware.py
tests/: test_app_smoke.py  test_bias_tee.py  test_charge_basis.py  test_collapse_operators.py  test_control_noise.py  test_crab_optimizer.py  test_device_params.py  test_drag_leakage.py  test_drag_optimizer.py  test_drive_couplings.py  test_duffing.py  test_eigensystem_cache.py  test_envelope.py  test_fidelity.py  test_from_spectrum_guard.py  test_grape_gradient.py  test_grape_optimizer.py  test_hardware_integration.py  test_hardware_interface.py  test_hardware_jacobian.py  test_iq_imbalance.py  test_lindblad.py  test_measured_optimization.py  test_measurement.py  test_model_interface.py  test_optimizer_integration.py  test_opx_export.py  test_problem.py  test_propagator.py  test_robust.py  test_robust_optimization.py  test_transfer_function.py  test_units.py  test_viz_allxy.py  test_viz_bloch.py  test_viz_spectrum.py  test_viz_trajectory.py
(+1 files in other folders)
