[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pulselab"
version = "0.1.0"
description = "Interactive single-transmon microwave pulse optimization lab."
requires-python = ">=3.10"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
test = ["pytest"]
app = ["streamlit", "plotly"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pulselab*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
